add active url
