# api/api_admin_user.go
@@ -22,6 +22,14 @@ type AdminUpdateUserRequest struct {
 	Status   admin.AdminUserStatus `json:"status" form:"status"`
 }
 
+type AdminSearchUserRequest struct {
+	Name   string                `json:"name" form:"name"`
+	Email  string                `json:"email" form:"email"`
+	Status admin.AdminUserStatus `json:"status" form:"status"`
+	Page   int64                 `json:"page" form:"page"`
+	Size   int64                 `json:"size" form:"size"`
+}
+
 type AdminUserResponse struct {
 	UserId   string                `json:"user_id" form:"user_id" binding:"required"`
 	Username string                `json:"username" form:"username"`
@@ -96,16 +104,38 @@ func apiAdminResetUserPassword(c *gin.Context, op *admin.AdminUser) {
 	c.JSON(http.StatusOK, RSuccess(makeAdminUserResponse(targetUser)))
 }
 
+// apiAdminActiveUser
+//
+//	@Summary	用户激活账户，设置密码
+//	@Tags		Admin API
+//	@Produce	json
+//	@Param		new_password	formData	string									true	"用户新密码"
+//	@Success	200				{object}	api.JSONResult{data=AdminUserResponse}	"AdminUser"
+//	@Router		/api/v1/admin/user/active [post]
+func apiAdminActiveUser(c *gin.Context, user *admin.AdminUser) {
+	newPwd, ok := c.GetPostForm("new_password")
+	if !ok {
+		c.AbortWithStatusJSON(http.StatusBadRequest, RError("new_password is required"))
+		return
+	}
+	activeUser, err := admin_user_mgr.Get().ActiveUser(user, newPwd)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, RError(err.Error()))
+		return
+	}
+	c.JSON(http.StatusOK, RSuccess(makeAdminUserResponse(activeUser)))
+}
+
 // apiAdminUpdateUserBaseInfo
 //
 //	@Summary	更新用户信息
 //	@Tags		Admin API
 //	@Produce	json
 //	@Accept		json
-//	@Param		user_id		body		string									true	"用户ID"
-//	@Param		email		body		string									true	"邮箱"
-//	@Param		auth		body		admin.AdminUserAuth						true	"权限"
-//	@Success	200			{object}	api.JSONResult{data=AdminUserResponse}	"admin user"
+//	@Param		user_id	body		string									true	"用户ID"
+//	@Param		email	body		string									true	"邮箱"
+//	@Param		auth	body		admin.AdminUserAuth						true	"权限"
+//	@Success	200		{object}	api.JSONResult{data=AdminUserResponse}	"admin user"
 //	@Router		/api/v1/admin/user/update_base_info [post]
 func apiAdminUpdateUserBaseInfo(c *gin.Context, op *admin.AdminUser) {
 	req := &AdminUpdateUserRequest{}
@@ -149,9 +179,46 @@ func apiAdminUpdateUserStatus(c *gin.Context, op *admin.AdminUser) {
 	c.JSON(http.StatusOK, RSuccess(makeAdminUserResponse(u)))
 }
 
+// apiAdminUpdateUserStatus
+//
+//	@Summary	查询用户
+//	@Tags		Admin API
+//	@Produce	json
+//	@Accept		json
+//	@Param		name	body		string											false	"用户名称"
+//	@Param		email	body		string											false	"用户email"
+//	@Param		status	body		int												false	"用户状态"
+//	@Param		size	body		int64											false	"每页数量"
+//	@Param		page	body		int64											false	"当前页数，从1开始"
+//	@Success	200		{object}	api.JSONResult{data=[]admin.AdminUserResult}	"Search Result"
+//	@Router		/api/v1/admin/user/search [post]
+func apiAdminSearchUsers(c *gin.Context, op *admin.AdminUser) {
+	req := &AdminSearchUserRequest{}
+	if err := c.ShouldBindBodyWithJSON(req); err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, RError(err.Error()))
+		return
+	}
+	r, totalPages, err := admin_user_mgr.Get().GetUserList(req.Name, req.Email, req.Status, req.Size, req.Page)
+
+	ar := make([]*admin.AdminUserResult, 0)
+
+	for _, user := range r {
+		ar = append(ar, admin.ToAdminUserResult(user))
+	}
+
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, RError(err.Error()))
+		return
+	}
+
+	c.JSON(http.StatusOK, PageSuccess(ar, req.Page, req.Size, totalPages))
+}
+
 func init() {
 	web.GetService().RegisterApi(web.ApiModuleAdmin, web.POST, "user/create", adminHandlerAuthWrapper(admin.AdminAuth_User, apiAdminCreateUser))
 	web.GetService().RegisterApi(web.ApiModuleAdmin, web.POST, "user/reset_password", adminHandlerAuthWrapper(admin.AdminAuth_User, apiAdminResetUserPassword))
 	web.GetService().RegisterApi(web.ApiModuleAdmin, web.POST, "user/update_base_info", adminHandlerAuthWrapper(admin.AdminAuth_User, apiAdminUpdateUserBaseInfo))
 	web.GetService().RegisterApi(web.ApiModuleAdmin, web.POST, "user/update_status", adminHandlerAuthWrapper(admin.AdminAuth_User, apiAdminUpdateUserStatus))
+	web.GetService().RegisterApi(web.ApiModuleAdmin, web.POST, "user/search", adminHandlerAuthWrapper(admin.AdminAuth_User, apiAdminSearchUsers))
+	web.GetService().RegisterApi(web.ApiModuleAdmin, web.POST, "/user/active", adminHandlerAuthWrapper(admin.AdminAuth_User, apiAdminActiveUser))
 }
